--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,24 +2,238 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "58ab0f48-10fd-48d4-a558-81669da59d97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "#basic imports\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f8b9dc76-8642-4098-9114-4c9a7c9106ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sklearn imports\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.metrics import root_mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c3b25dec-97af-43e4-b770-1c787a7c5ff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#getting the data\n",
+    "#January 2023 yellow\n",
+    "df_jan_2023_y = pd.read_parquet('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet')\n",
+    "#February 2023 yellow\n",
+    "df_feb_2023_y = pd.read_parquet('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f8b9dc76-8642-4098-9114-4c9a7c9106ed",
+   "id": "cc4900b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>airport_fee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:32:10</td>\n",
+       "      <td>2023-01-01 00:40:36</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>161</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:55:08</td>\n",
+       "      <td>2023-01-01 01:01:27</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>43</td>\n",
+       "      <td>237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.90</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:25:04</td>\n",
+       "      <td>2023-01-01 00:37:49</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>48</td>\n",
+       "      <td>238</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34.90</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 00:03:48</td>\n",
+       "      <td>2023-01-01 00:13:25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>138</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.85</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:10:29</td>\n",
+       "      <td>2023-01-01 00:21:19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>107</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.68</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'2.2.3'"
+       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         2  2023-01-01 00:32:10   2023-01-01 00:40:36              1.0   \n",
+       "1         2  2023-01-01 00:55:08   2023-01-01 01:01:27              1.0   \n",
+       "2         2  2023-01-01 00:25:04   2023-01-01 00:37:49              1.0   \n",
+       "3         1  2023-01-01 00:03:48   2023-01-01 00:13:25              0.0   \n",
+       "4         2  2023-01-01 00:10:29   2023-01-01 00:21:19              1.0   \n",
+       "\n",
+       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
+       "0           0.97         1.0                  N           161           141   \n",
+       "1           1.10         1.0                  N            43           237   \n",
+       "2           2.51         1.0                  N            48           238   \n",
+       "3           1.90         1.0                  N           138             7   \n",
+       "4           1.43         1.0                  N           107            79   \n",
+       "\n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             2          9.3   1.00      0.5        0.00           0.0   \n",
+       "1             1          7.9   1.00      0.5        4.00           0.0   \n",
+       "2             1         14.9   1.00      0.5       15.00           0.0   \n",
+       "3             1         12.1   7.25      0.5        0.00           0.0   \n",
+       "4             1         11.4   1.00      0.5        3.28           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \n",
+       "0                    1.0         14.30                   2.5         0.00  \n",
+       "1                    1.0         16.90                   2.5         0.00  \n",
+       "2                    1.0         34.90                   2.5         0.00  \n",
+       "3                    1.0         20.85                   0.0         1.25  \n",
+       "4                    1.0         19.68                   2.5         0.00  "
       ]
      },
      "execution_count": 4,
@@ -28,13 +242,158 @@
     }
    ],
    "source": [
-    "pd.__version__"
+    "# Q1 Read the data for January. How many columns are there?\n",
+    "df_jan_2023_y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d59df83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3066766 entries, 0 to 3066765\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                 Dtype         \n",
+      "---  ------                 -----         \n",
+      " 0   VendorID               int64         \n",
+      " 1   tpep_pickup_datetime   datetime64[us]\n",
+      " 2   tpep_dropoff_datetime  datetime64[us]\n",
+      " 3   passenger_count        float64       \n",
+      " 4   trip_distance          float64       \n",
+      " 5   RatecodeID             float64       \n",
+      " 6   store_and_fwd_flag     object        \n",
+      " 7   PULocationID           int64         \n",
+      " 8   DOLocationID           int64         \n",
+      " 9   payment_type           int64         \n",
+      " 10  fare_amount            float64       \n",
+      " 11  extra                  float64       \n",
+      " 12  mta_tax                float64       \n",
+      " 13  tip_amount             float64       \n",
+      " 14  tolls_amount           float64       \n",
+      " 15  improvement_surcharge  float64       \n",
+      " 16  total_amount           float64       \n",
+      " 17  congestion_surcharge   float64       \n",
+      " 18  airport_fee            float64       \n",
+      "dtypes: datetime64[us](2), float64(12), int64(4), object(1)\n",
+      "memory usage: 444.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_jan_2023_y.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9bc73074",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3066766, 19)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_jan_2023_y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "beab07ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VendorID',\n",
+       " 'tpep_pickup_datetime',\n",
+       " 'tpep_dropoff_datetime',\n",
+       " 'passenger_count',\n",
+       " 'trip_distance',\n",
+       " 'RatecodeID',\n",
+       " 'store_and_fwd_flag',\n",
+       " 'PULocationID',\n",
+       " 'DOLocationID',\n",
+       " 'payment_type',\n",
+       " 'fare_amount',\n",
+       " 'extra',\n",
+       " 'mta_tax',\n",
+       " 'tip_amount',\n",
+       " 'tolls_amount',\n",
+       " 'improvement_surcharge',\n",
+       " 'total_amount',\n",
+       " 'congestion_surcharge',\n",
+       " 'airport_fee']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#List of columns \n",
+    "df_jan_2023_y.columns.tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "66912252",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VendorID                          int64\n",
+       "tpep_pickup_datetime     datetime64[us]\n",
+       "tpep_dropoff_datetime    datetime64[us]\n",
+       "passenger_count                 float64\n",
+       "trip_distance                   float64\n",
+       "RatecodeID                      float64\n",
+       "store_and_fwd_flag               object\n",
+       "PULocationID                      int64\n",
+       "DOLocationID                      int64\n",
+       "payment_type                      int64\n",
+       "fare_amount                     float64\n",
+       "extra                           float64\n",
+       "mta_tax                         float64\n",
+       "tip_amount                      float64\n",
+       "tolls_amount                    float64\n",
+       "improvement_surcharge           float64\n",
+       "total_amount                    float64\n",
+       "congestion_surcharge            float64\n",
+       "airport_fee                     float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_jan_2023_y.dtypes\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b25dec-97af-43e4-b770-1c787a7c5ff3",
+   "id": "69a2e0d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "basic",
    "language": "python",
    "name": "python3"
   },
@@ -56,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
