--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -396,6 +396,545 @@
    "id": "69a2e0d7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Q2. Computing duration\n",
+    "#Now let's compute the duration variable. It should contain the duration of a ride in minutes.\n",
+    "#What's the standard deviation of the trips duration in January?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5c07371e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         0 days 00:08:26\n",
+       "1         0 days 00:06:19\n",
+       "2         0 days 00:12:45\n",
+       "3         0 days 00:09:37\n",
+       "4         0 days 00:10:50\n",
+       "                ...      \n",
+       "3066761   0 days 00:13:59\n",
+       "3066762   0 days 00:19:27\n",
+       "3066763   0 days 00:24:31\n",
+       "3066764   0 days 00:13:00\n",
+       "3066765   0 days 00:14:24\n",
+       "Length: 3066766, dtype: timedelta64[us]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_jan_2023_y.tpep_dropoff_datetime = pd.to_datetime(df_jan_2023_y.tpep_dropoff_datetime)                        \n",
+    "df_jan_2023_y.tpep_pickup_datetime = pd.to_datetime(df_jan_2023_y.tpep_pickup_datetime)     \n",
+    "#the difference   \n",
+    "df_jan_2023_y.tpep_dropoff_datetime - df_jan_2023_y.tpep_pickup_datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "131130d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_jan_2023_y['duration'] = df_jan_2023_y.tpep_dropoff_datetime - df_jan_2023_y.tpep_pickup_datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "dfdedd2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>airport_fee</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:32:10</td>\n",
+       "      <td>2023-01-01 00:40:36</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>161</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0 days 00:08:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:55:08</td>\n",
+       "      <td>2023-01-01 01:01:27</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>43</td>\n",
+       "      <td>237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.90</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0 days 00:06:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:25:04</td>\n",
+       "      <td>2023-01-01 00:37:49</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>48</td>\n",
+       "      <td>238</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34.90</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0 days 00:12:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 00:03:48</td>\n",
+       "      <td>2023-01-01 00:13:25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>138</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.85</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0 days 00:09:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:10:29</td>\n",
+       "      <td>2023-01-01 00:21:19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>107</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.68</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0 days 00:10:50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         2  2023-01-01 00:32:10   2023-01-01 00:40:36              1.0   \n",
+       "1         2  2023-01-01 00:55:08   2023-01-01 01:01:27              1.0   \n",
+       "2         2  2023-01-01 00:25:04   2023-01-01 00:37:49              1.0   \n",
+       "3         1  2023-01-01 00:03:48   2023-01-01 00:13:25              0.0   \n",
+       "4         2  2023-01-01 00:10:29   2023-01-01 00:21:19              1.0   \n",
+       "\n",
+       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
+       "0           0.97         1.0                  N           161           141   \n",
+       "1           1.10         1.0                  N            43           237   \n",
+       "2           2.51         1.0                  N            48           238   \n",
+       "3           1.90         1.0                  N           138             7   \n",
+       "4           1.43         1.0                  N           107            79   \n",
+       "\n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             2          9.3   1.00      0.5        0.00           0.0   \n",
+       "1             1          7.9   1.00      0.5        4.00           0.0   \n",
+       "2             1         14.9   1.00      0.5       15.00           0.0   \n",
+       "3             1         12.1   7.25      0.5        0.00           0.0   \n",
+       "4             1         11.4   1.00      0.5        3.28           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \\\n",
+       "0                    1.0         14.30                   2.5         0.00   \n",
+       "1                    1.0         16.90                   2.5         0.00   \n",
+       "2                    1.0         34.90                   2.5         0.00   \n",
+       "3                    1.0         20.85                   0.0         1.25   \n",
+       "4                    1.0         19.68                   2.5         0.00   \n",
+       "\n",
+       "         duration  \n",
+       "0 0 days 00:08:26  \n",
+       "1 0 days 00:06:19  \n",
+       "2 0 days 00:12:45  \n",
+       "3 0 days 00:09:37  \n",
+       "4 0 days 00:10:50  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_jan_2023_y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "13e6e922",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>airport_fee</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:32:10</td>\n",
+       "      <td>2023-01-01 00:40:36</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>161</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>8.433333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:55:08</td>\n",
+       "      <td>2023-01-01 01:01:27</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>43</td>\n",
+       "      <td>237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>16.90</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>6.316667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:25:04</td>\n",
+       "      <td>2023-01-01 00:37:49</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>48</td>\n",
+       "      <td>238</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34.90</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>12.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-01-01 00:03:48</td>\n",
+       "      <td>2023-01-01 00:13:25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>138</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.85</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>9.616667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-01-01 00:10:29</td>\n",
+       "      <td>2023-01-01 00:21:19</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>107</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.68</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>10.833333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         2  2023-01-01 00:32:10   2023-01-01 00:40:36              1.0   \n",
+       "1         2  2023-01-01 00:55:08   2023-01-01 01:01:27              1.0   \n",
+       "2         2  2023-01-01 00:25:04   2023-01-01 00:37:49              1.0   \n",
+       "3         1  2023-01-01 00:03:48   2023-01-01 00:13:25              0.0   \n",
+       "4         2  2023-01-01 00:10:29   2023-01-01 00:21:19              1.0   \n",
+       "\n",
+       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
+       "0           0.97         1.0                  N           161           141   \n",
+       "1           1.10         1.0                  N            43           237   \n",
+       "2           2.51         1.0                  N            48           238   \n",
+       "3           1.90         1.0                  N           138             7   \n",
+       "4           1.43         1.0                  N           107            79   \n",
+       "\n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             2          9.3   1.00      0.5        0.00           0.0   \n",
+       "1             1          7.9   1.00      0.5        4.00           0.0   \n",
+       "2             1         14.9   1.00      0.5       15.00           0.0   \n",
+       "3             1         12.1   7.25      0.5        0.00           0.0   \n",
+       "4             1         11.4   1.00      0.5        3.28           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \\\n",
+       "0                    1.0         14.30                   2.5         0.00   \n",
+       "1                    1.0         16.90                   2.5         0.00   \n",
+       "2                    1.0         34.90                   2.5         0.00   \n",
+       "3                    1.0         20.85                   0.0         1.25   \n",
+       "4                    1.0         19.68                   2.5         0.00   \n",
+       "\n",
+       "    duration  \n",
+       "0   8.433333  \n",
+       "1   6.316667  \n",
+       "2  12.750000  \n",
+       "3   9.616667  \n",
+       "4  10.833333  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#calculates the duration in minutes\n",
+    "df_jan_2023_y.duration = df_jan_2023_y.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "#display\n",
+    "df_jan_2023_y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d0f481b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let'a calculate the standard deviation (SD) of the duration column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5c652de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Let's check if the duration column is numeric\n",
+    "print(df_jan_2023_y['duration'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b7776f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard Deviation of duration: 42.594351241920904\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculating the SD of \n",
+    "std_dev = df_jan_2023_y['duration'].std()\n",
+    "print(\"Standard Deviation of duration:\", std_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1eaab57",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
