--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -3327,31 +3327,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "65e39f4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "#calculates the duration in minutes\n",
-    "df_val.duration = df_val.duration.apply(lambda td: td.total_seconds() / 60)\n",
-    "#display\n",
-    "df_val.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "9ebcae6b",
    "metadata": {},
@@ -3359,6 +3334,19 @@
    "source": [
     "# Keep only durations between 1 and 60 minutes\n",
     "df_val_filtered = df_val[(df_val['duration'] >= 1) & (df_val['duration'] <= 60)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4574d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculates the duration in minutes\n",
+    "df_val.duration = df_val.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "#display\n",
+    "df_val.head()"
    ]
   },
   {
@@ -3379,6 +3367,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53a41a5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_val_filtered.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "212ed54f",
    "metadata": {},
    "outputs": [],
@@ -3394,7 +3392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_val = df_val[target].values"
+    "y_val = df_val_filtered[target].values"
    ]
   },
   {
@@ -3414,7 +3412,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_squared_error(y_val, y_pred, squared=False)"
+    "#sanity check\n",
+    "print(len(y_val))       \n",
+    "print(len(y_pred)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0594ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_val = np.sqrt(mean_squared_error(y_val, y_pred))\n",
+    "print(f\"RMSE on training data: {rmse_val:.2f} minutes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e08b61",
+   "metadata": {},
+   "source": [
+    "RMSE on training data: 7.81 minutes"
    ]
   }
  ],
