--- a/02-experiment-tracking/homework.ipynb
+++ b/02-experiment-tracking/homework.ipynb
@@ -7,13 +7,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#homework"
+    "#Q1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f953cb5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.22.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "print(mlflow.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1404ecb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "exp-tracking-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
