add preprocessed data and 02/Q2 solutions

--- a/02-experiment-tracking/homework.ipynb
+++ b/02-experiment-tracking/homework.ipynb
@@ -35,6 +35,23 @@
    "id": "1404ecb6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Q2\n",
+    "#Q2. Download and preprocess the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22a3a7fe",
+   "metadata": {},
+   "source": [
+    "Answer: 4 files are in the output folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae3e644a",
+   "metadata": {},
    "source": []
   }
  ],
