--- a/02-experiment-tracking/homework.ipynb
+++ b/02-experiment-tracking/homework.ipynb
@@ -49,10 +49,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ae3e644a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83a2c532",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#Q3\n",
+    "#Train a model with autolog"
+   ]
   }
  ],
  "metadata": {
