--- a/02-experiment-tracking/homework.ipynb
+++ b/02-experiment-tracking/homework.ipynb
@@ -58,6 +58,20 @@
     "#Q3\n",
     "#Train a model with autolog"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "993f151e",
+   "metadata": {},
+   "source": [
+    "Answer: the value of the min_samlple_split parameter is 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f988d18",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
