--- a/02-experiment-tracking/homework.ipynb
+++ b/02-experiment-tracking/homework.ipynb
@@ -41,6 +41,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "df537780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dv.pkl\ttest.pkl  train.pkl  val.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "!dir \"output\" "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "22a3a7fe",
    "metadata": {},
@@ -71,7 +89,9 @@
    "cell_type": "markdown",
    "id": "8f988d18",
    "metadata": {},
-   "source": []
+   "source": [
+    "#4 "
+   ]
   }
  ],
  "metadata": {
