--- a/02-experiment-tracking/homework.ipynb
+++ b/02-experiment-tracking/homework.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "80aec6ba",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,67 @@
       "\n",
       "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
       "\n",
-      " 70%|███████   | 35/50 [03:44<01:30,  6.01s/trial, best loss: 5.320408749882826]"
+      "🏃 View run colorful-croc-10 at: http://127.0.0.1:5000/#/experiments/2/runs/885eeffb37244cf993a0eeaa28f22b66\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run traveling-snake-239 at: http://127.0.0.1:5000/#/experiments/2/runs/26fae37c8f3146cb84c4c96661f120d9\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run skittish-rook-117 at: http://127.0.0.1:5000/#/experiments/2/runs/244dab06c5d34cd6a05d2e113f78f3fb\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run luminous-frog-903 at: http://127.0.0.1:5000/#/experiments/2/runs/65f8411389664ec9b730208675b3cafc\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run calm-sheep-593 at: http://127.0.0.1:5000/#/experiments/2/runs/493d3e2bd1f3414983208251f06d2343\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run rogue-shrike-855 at: http://127.0.0.1:5000/#/experiments/2/runs/290bdb2d86314f9f824af96035d1f851\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run charming-mouse-741 at: http://127.0.0.1:5000/#/experiments/2/runs/1855ee92986e45bd9b8b13981f415eaa\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run orderly-swan-734 at: http://127.0.0.1:5000/#/experiments/2/runs/d342b7fa760f4408ac46bd5ad020ac95\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run agreeable-lamb-330 at: http://127.0.0.1:5000/#/experiments/2/runs/a2419eac18d24d67b6e3366e3ad1f5ad\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run enthused-snake-53 at: http://127.0.0.1:5000/#/experiments/2/runs/e37c2a9e3789490d91c163d5c972c474\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run crawling-smelt-51 at: http://127.0.0.1:5000/#/experiments/2/runs/4fbe60eca98e4f0b875774ca92186d34\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run magnificent-crane-90 at: http://127.0.0.1:5000/#/experiments/2/runs/90ca8262eb58479daecad8c81fc02672\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run fearless-kite-967 at: http://127.0.0.1:5000/#/experiments/2/runs/87e31a1af69d453a88ca6af9b45d5d8d\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run aged-grouse-60 at: http://127.0.0.1:5000/#/experiments/2/runs/9b1252ee62c449f8a4ae22838a26ceea\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "🏃 View run unique-bass-103 at: http://127.0.0.1:5000/#/experiments/2/runs/3999043d8e5b4df59b26f2ec1588c263\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/2                    \n",
+      "\n",
+      "100%|██████████| 50/50 [05:35<00:00,  6.71s/trial, best loss: 5.320408749882826]\n"
      ]
     }
    ],
@@ -286,79 +346,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "37c40ed8",
+   "cell_type": "markdown",
+   "id": "e398e2d2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import mlflow\n",
-    "from mlflow.tracking import MlflowClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "d99681c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = MlflowClient(\"http.//127.0.0.1:5000\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "27a99b9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "experiment_name = \"random-forest-hyperopt\"\n",
-    "experiment = client.get_experiment_by_name(experiment_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "7dffd80f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Malformed experiment '2'. Detailed error Yaml file '/home/dusarpi/data.talks/mlops-zoomcamp/02-experiment-tracking/mlruns/2/meta.yaml' does not exist.\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/dusarpi/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py\", line 329, in search_experiments\n",
-      "    exp = self._get_experiment(exp_id, view_type)\n",
-      "  File \"/home/dusarpi/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py\", line 427, in _get_experiment\n",
-      "    meta = FileStore._read_yaml(experiment_dir, FileStore.META_DATA_FILE_NAME)\n",
-      "  File \"/home/dusarpi/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py\", line 1373, in _read_yaml\n",
-      "    return _read_helper(root, file_name, attempts_remaining=retries)\n",
-      "  File \"/home/dusarpi/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/store/tracking/file_store.py\", line 1366, in _read_helper\n",
-      "    result = read_yaml(root, file_name)\n",
-      "  File \"/home/dusarpi/anaconda3/envs/exp-tracking-env/lib/python3.9/site-packages/mlflow/utils/file_utils.py\", line 310, in read_yaml\n",
-      "    raise MissingConfigException(f\"Yaml file '{file_path}' does not exist.\")\n",
-      "mlflow.exceptions.MissingConfigException: Yaml file '/home/dusarpi/data.talks/mlops-zoomcamp/02-experiment-tracking/mlruns/2/meta.yaml' does not exist.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import mlflow\n",
-    "\n",
-    "experiments = mlflow.search_experiments()\n",
-    "for exp in experiments:\n",
-    "    print(f\"Name: {exp.name}, ID: {exp.experiment_id}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edf51f93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('The best validation rmse is :', round(best_run.data.metrics['rmse'], 3))"
+    "Answer: 5.335"
    ]
   },
   {
@@ -367,7 +359,17 @@
    "id": "0f645bae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Q6 Promote the best model to the model registry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daa85706",
+   "metadata": {},
+   "source": [
+    "Answer: 5.567"
+   ]
   }
  ],
  "metadata": {
